updated artifact name as per other support library standard qaf-support-*

--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,12 @@
-artifact.name=qaf-openapi-support
+artifact.name=qaf-support-openapi
 version-num=0.0
-build-num=1-SNAPSHOT
+build-num=1-beta
 #-beta-3
 #-SNAPSHOT
-publish.resolver=nexus-snapshots
+publish.resolver=nexus-staging
 #snapshots
 #releases
+#staging
 status=release
 #snapshots
 #release
