--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -15,16 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Checkout submodules
-      uses: srt32/git-actions@v0.0.3
-      with:
-        args: git submodule update --init --recursive 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Ant
+    - name: Trigger parent project build
       run: |
-        #ant -noinput -buildfile build.xml -Dskip.download=false -silent
         curl -XPOST -u "${{ secrets.GITHUB_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json"  -H "Content-Type: application/json" https://api.github.com/repos/qmetry/qaf-parent/dispatches --data '{"event_type": "build_application"}'
