--- a/ivy.xml
+++ b/ivy.xml
@@ -20,11 +20,11 @@
         <conf name="provided" description="Needed for compile, but will be present on the target platform."/>        
     </configurations>
 	<dependencies>
-		<dependency org="com.qmetry" name="qaf" rev="latest.integration"  conf="compile->*"/>
+		<dependency org="com.qmetry" name="qaf" rev="${release.num}"  conf="compile->default"/>
 		<dependency org="io.swagger.parser.v3" name="swagger-parser" rev="2.0.16" conf="compile->default"/>
 		<!-- <dependency org="ch.qos.logback" name="logback-classic" rev="1.2.3" conf="compile->default"/> -->
 		<dependency org="com.atlassian.oai" name="swagger-request-validator-core" rev="2.8.3" conf="compile->default"/>
-		<dependency org="com.qmetry" name="qaf-support-ws" rev="latest.integration"  conf="compile->*"/>
+		<dependency org="com.qmetry" name="qaf-support-ws" rev="${release.num}"  conf="compile->*"/>
 		<dependency org="org.hamcrest" name="hamcrest-core" rev="latest.integration"  conf="compile->default" />
 		<dependency org="org.hamcrest" name="hamcrest-library" rev="latest.integration"  conf="compile->default" />
 	</dependencies>
